Thu May 29 23:00:24 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * tests/Makefile.ContentHandler_Test:
        * tests/Makefile:

          This file got left out by mistake during the big merge.

Thu May 29 22:03:40 2003  Krishnakumar B  <kitty@spam.invalid.domain>

        * ACEXML/ACEXML.mwc:
        * ACEXML/ChangeLog:
        * ACEXML/apps/svcconf/ACEXML_XML_Svc_Conf_Parser.dsp:
        * ACEXML/apps/svcconf/Makefile.ACEXML_XML_Svc_Conf_Parser:
        * ACEXML/apps/svcconf/Makefile.ACEXML_XML_Svc_Conf_Parser.bor:
        * ACEXML/common/ACEXML.dsp:
        * ACEXML/common/Makefile.ACEXML:
        * ACEXML/common/Makefile.ACEXML.bor:
        * ACEXML/examples/SAXPrint/Makefile.SAXPrint:
        * ACEXML/examples/SAXPrint/Makefile.SAXPrint.bor:
        * ACEXML/examples/svcconf/Makefile:
        * ACEXML/examples/svcconf/Makefile.Svcconf:
        * ACEXML/examples/svcconf/Makefile.Svcconf.bor:
        * ACEXML/examples/svcconf/Svcconf.mpc:
        * ACEXML/parser/parser/ACEXML_Parser.dsp:
        * ACEXML/parser/parser/Makefile.ACEXML_Parser:
        * ACEXML/parser/parser/Makefile.ACEXML_Parser.bor:
        * ACEXML/parser/parser/Makefile.Parser:
        * ACEXML/tests/Makefile.ContentHandler_Test.bor:
        * ACEXML/tests/Makefile.HttpCharStream_Test:
        * ACEXML/tests/Makefile.HttpCharStream_Test.bor:
        * ACEXML/tests/Makefile.NamespaceSupport_Test:
        * ACEXML/tests/Makefile.NamespaceSupport_Test.bor:
        * ACEXML/tests/Makefile.Transcoder_Test:
        * ACEXML/tests/Makefile.Transcoder_Test.bor:

          New files to build ACEXML generated using MPC.

        * ACEXML/apps/svcconf/svcconf.dtd:

          Moved the DTD from a hidden location to a prominent one.

        * ACEXML/examples/SAXPrint/namespaces.xml:

          New file to test namespace support.

        * ACEXML/common/ZipCharStream.cpp:
        * ACEXML/common/ZipCharStream.h:

          New files to support reading files from within a ZIP archive as