@@ -1,55 +1,0 @@
-#----------------------------------------------------------------------------
-#       GNU Makefile
-#----------------------------------------------------------------------------
-MAKEFILE        = Makefile.Parser
-DEPENDENCY_FILE = .depend.Makefile.Parser
-LIB_UNCHECKED   = libACEXML_Parser.a
-SHLIB_UNCHECKED = libACEXML_Parser.$(SOEXT)
-
-
-
-FILES = \
-  Parser \
-  Entity_Manager \
-  ParserContext \
-  ParserInternals
-#----------------------------------------------------------------------------
-#       Include macros and targets
-#----------------------------------------------------------------------------
-
-LIB   = $(LIB_UNCHECKED)
-SHLIB = $(SHLIB_UNCHECKED)
-
-include $(ACE_ROOT)/include/makeinclude/wrapper_macros.GNU
-LSRC   = $(addsuffix .cpp, $(FILES))
-ACELIB = -lACE
-
-include $(ACE_ROOT)/include/makeinclude/macros.GNU
-include $(ACE_ROOT)/include/makeinclude/rules.common.GNU
-include $(ACE_ROOT)/include/makeinclude/rules.nonested.GNU
-include $(ACE_ROOT)/include/makeinclude/rules.lib.GNU
-include $(ACE_ROOT)/include/makeinclude/rules.local.GNU
-
-CPPFLAGS     += -I../../..
-ifeq ($(shared_libs),1)
-  ifneq ($(SHLIB),)
-    CPPFLAGS += -DACEXML_PARSER_BUILD
-  endif
-endif
-ifeq ($(static_libs),1)
-  ifneq ($(LIB),)
-    CPPFLAGS += -DACE_AS_STATIC_LIBS
-  endif
-endif
-
-
-LDFLAGS      += -L../../../ace
-
-ACE_SHLIBS  = -lACEXML $(ACELIB)
-
-#----------------------------------------------------------------------------
-#       Local targets
-#----------------------------------------------------------------------------
-
-realclean: clean 
-
