@@ -1,9 +1,21 @@
+Thu May 29 23:13:40 2003  Krishnakumar B  <kitty@spam.invalid.domain>
+
+        * examples/SAXPrint/SAXPrint_Handler.cpp: Fixed some minor
+          warnings.
+
+Thu May 29 23:09:27 2003  Krishnakumar B  <kitty@spam.invalid.domain>
+
+        * parser/parser/Makefile.Parser:
+
+          Removed extra file left over by mistake.
+
 Thu May 29 23:00:24 2003  Krishnakumar B  <kitty@spam.invalid.domain>
 
         * tests/Makefile.ContentHandler_Test:
         * tests/Makefile:
 
           This file got left out by mistake during the big merge.
+
 
 Thu May 29 22:03:40 2003  Krishnakumar B  <kitty@spam.invalid.domain>
 
